add alumno form angular

--- a/cursos/src/app/components/alumnos/alumnos.component.html
+++ b/cursos/src/app/components/alumnos/alumnos.component.html
@@ -1,25 +1,38 @@
+<div class="card text-dark bg-light mb-3" >
+    <div class="card-header">{{titulo}}</div>
+    <div class="card-body">
+        <button class="btn btn-primary my-2" routerLink="/alumnos/form">Crear</button>
+        <table class="table table-hover table-striped">
+            <thead>
+                <tr>
+                    <th>id</th>
+                    <th>nombre</th>
+                    <th>apellido</th>
+                    <th>email</th>
+                    <th>creado en</th> 
+                    <th>opciones</th> 
+                </tr>
+            </thead>
+            <tbody>
+                <tr *ngFor="let alumno of alumnos">
+                    <td>{{alumno.id}}</td>
+                    <td>{{alumno.nombre | uppercase}}</td>
+                    <td>{{alumno.apellido}}</td>
+                    <td>{{alumno.email}}</td>
+                    <td>{{alumno.createAt | date:'yyyy/MM/dd' }}</td>
+                    <td>
+                        <button class="mr-5 btn btn-primary  btn-sm" [routerLink]="['/alumnos/form',alumno.id]">Editar</button>
+                        <button class="btn btn-danger  btn-sm" (click)="eliminar(alumno)">Eliminar</button>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
 
-<h1>{{titulo}}</h1>
-<table class="table table-hover table-striped">
-    <thead>
-        <tr>
-            <th>id</th>
-            <th>nombre</th>
-            <th>apellido</th>
-            <th>email</th>
-            <th>creado en</th> 
-        </tr>
-    </thead>
-    <tbody>
-        <tr *ngFor="let alumno of alumnos">
-            <td>{{alumno.id}}</td>
-            <td>{{alumno.nombre}}</td>
-            <td>{{alumno.apellido}}</td>
-            <td>{{alumno.email}}</td>
-            <td>{{alumno.createAt}}</td>
-        </tr>
-    </tbody>
-</table>
+
+
+
+
 
 
     
