--- a/cursos/src/app/components/alumnos/alumnos.component.html
+++ b/cursos/src/app/components/alumnos/alumnos.component.html
@@ -2,7 +2,10 @@
     <div class="card-header">{{titulo}}</div>
     <div class="card-body">
         <button class="btn btn-primary my-2" routerLink="/alumnos/form">Crear</button>
-        <table class="table table-hover table-striped">
+        <div class="alert alert-info" *ngIf="alumnos?.length==0">
+           No hay alumnos en el sistema.
+        </div>
+        <table class="table table-hover table-striped" *ngIf="alumnos.length>0">
             <thead>
                 <tr>
                     <th>id</th>
@@ -21,12 +24,23 @@
                     <td>{{alumno.email}}</td>
                     <td>{{alumno.createAt | date:'yyyy/MM/dd' }}</td>
                     <td>
-                        <button class="mr-5 btn btn-primary  btn-sm" [routerLink]="['/alumnos/form',alumno.id]">Editar</button>
-                        <button class="btn btn-danger  btn-sm" (click)="eliminar(alumno)">Eliminar</button>
-                    </td>
+                        <button class="btn btn-primary  btn-sm" [routerLink]="['/alumnos/form',alumno.id]">Editar</button></td>
+                        <td>
+                            <button class="btn btn-danger  btn-sm" (click)="eliminar(alumno)">Eliminar</button>
+                        </td>
+                        
+                    
                 </tr>
             </tbody>
         </table>
+        <mat-paginator [length]="totalRegistros"
+              [pageSize]="totalPorPagina"
+              [pageIndex]="paginaActual"
+              [pageSizeOptions]="[5, 10, 25, 100]"
+              (page)="paginar($event)"
+              showFirstLastButtons
+              class="float-left mx-2">
+        </mat-paginator>
     </div>
 
 
